tests/snapshots/integration__integration_tests__merge__merge_pre_merge_check_failure.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmp1qPE9E/test-config.toml
---
success: false
exit_code: 1
----- stdout -----
🔄 [36mValidating merge...[0m

----- stderr -----
🔄 [36mRunning pre-merge check [1m[36mcmd[0m:[0m
[40m [0m exit 1
❌ [31mPre-merge check failed: [1m[31mcmd[0m[0m

Command failed with exit code: exit status: 1

💡 [2mUse --no-hooks to skip pre-merge checks[0m
